--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <h1>"hello this is a test thing!"</h1>
+        <h2>the class is only ok so far tbh</h2>
         <script src="" async defer></script>
     </body>
 </html>
