last text tweeks

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         We are also serving Sushi today.We are also serving Sushi today.We are also serving Sushi today.
                         We are also serving Sushi today.We are also serving Sushi today.We are also serving Sushi today.
                         We are also serving Sushi today.We are also serving Sushi today.We are also serving Sushi today.
-                        We are also serving Sushi today.We are also serving Sushi today.We are also serving Sushi today.                        
+                        We are also serving Sushi today.We are also serving Sushi today.                       
                     </p>
             </section>                    
         </div>
