menu name change

--- a/module3-solution/index_basic.html
+++ b/module3-solution/index_basic.html
@@ -58,7 +58,7 @@
     </header>
 
     <div id="main-content" class="container">
-        <h2 id="top-heading" class="text-center">Menu</h2>
+        <h2 id="top-heading" class="text-center">Our Menu</h2>
         <section id="main-section">
             <h3 class="text-center">Fried Chicken</h3>
             <p>
