--- a/module3-solution/index_complicated.html
+++ b/module3-solution/index_complicated.html
@@ -34,13 +34,17 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs text-center">
                         <li>
-                            <a href="#chicken-tile"><br class="hidden-xs"> Chicken</a>
+                            <a><br class="hidden-xs"> Fried Chicken</a>
                         </li>
+
+
                         <li>
-                            <a href="#BBQ-tile"><br class="hidden-xs"> BBQ</a>
+                            <a><br class="hidden-xs"> BBQ</a>
                         </li>
+
+
                         <li>
-                            <a href="#sushi-tile"><br class="hidden-xs"> Sushi</a>
+                            <a><br class="hidden-xs"> Sushi</a>
                         </li>
                     </ul>
                 </div>
