--- a/index.html
+++ b/index.html
@@ -1,229 +1,14 @@
 <!DOCTYPE html>
-<html lang="zxx">
-
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Solution Attempt for Module 3</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet">
-    
-
-
-
-
-
-
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
-
 <body>
-    <header>
-        <nav id="header-nav" class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <div class="navbar-brand">
-                        <a href="index.html"><h1>Big Food Corporate, LLC</h1></a>
-                    </div>
-
-                    <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-
-                <div id="collapsable-nav" class="collapse navbar-collapse">
-                    <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs text-center">
-                        <li>
-                            <a href="#chicken-tile"><br class="hidden-xs"> Chicken</a>
-                        </li>
-                        <li>
-                            <a href="#beef-tile"><br class="hidden-xs"> Beef</a>
-                        </li>
-                        <li>
-                            <a href="#sushi-tile"><br class="hidden-xs"> Sushi</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div id="main-content" class="container">
-        <h2 id="top-heading" class="text-center">Our Menu</h2>
-        <div id="home-tiles" class="row">
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div id="chicken-tile">
-                    <section>
-                        <h3 class="text-center">Fried Chicken</h3>
-                        <p>
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                        </p>
-                                    <p>
-                            (End of Fried Chicken section) <a href="#top-heading">Back to Top</a>
-                        </p>
-                    </section>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div id="BBQ-tile">
-                    <section>
-                        <h3 class="text-center">BBQ</h3>
-                        <p>
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                        </p>
-                                    <p>
-                            (End of BBQ section) <a href="#top-heading">Back to Top</a>
-                        </p>
-                    </section>
-                </div>
-            </div>
-            <!-- <div class="clearfix visible-md-block"></div> -->
-            <div class="col-md-4 col-sm-12 col-xs-12">
-                <div id="sushi-tile">
-                    <section>
-                        <h3 class="text-center">Sushi</h3>
-                        <p>
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                            This is my menu.This is my menu.This is my menu.This is my menu.This is my menu.
-                        </p>
-                                    <p>
-                            (End of Sushi section) <a href="#top-heading">Back to Top</a>
-                        </p>
-                    </section>
-                </div>
-            </div>
-            <!-- <div class="clearfix visible-lg-block"></div> -->
-        </div>
-    </div>
-    <div class="clearfix visible-lg-block"></div>
-
-
-    <!-- jQuery (Bootstrap JS plugins depend on it) -->
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- <script src="js/script.js"></script> -->
-
+  <h1>Module 4 Solution Starter</h1>
+  <p>	Check if this is working in the web tools! </p>
 </body>
-
 </html>
